Updated log and overall UI

--- a/www/css/main.css
+++ b/www/css/main.css
@@ -59,9 +59,9 @@ resize:vertical;
    ========================================================================== */
    
 @font-face {
-	font-family: 'vampire';
+	font-family: 'csnpwdt';
     /*src: url('fonts/bariol_regular-webfont.eot');*/
-    src: url('fonts/vampire.ttf') format('truetype');
+    src: url('fonts/csnpwdt.ttf') format('truetype');
     /*src: url('fonts/bariol_regular-webfont.eot?#iefix') format('embedded-opentype'),*/
          /*url('fonts/bariol_regular-webfont.woff2') format('woff2'),*/
          /*url('fonts/bariol_regular-webfont.woff') format('woff'),*/
