--- a/www/css/main.css
+++ b/www/css/main.css
@@ -282,5 +282,5 @@ page-break-after:avoid;
 }
 
 #iap {
-    float: right; vertical-align: middle; margin-top: 100px; margin-right: 5px;
+    float: right; margin-top: 50px; margin-right: 5px;
 }
